# tennis-gl

./: CMakeLists.txt  LICENSE  README.md
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: gl.h
src/: ball.c  ball.h  game.c  game.h  main.c  matrix.c  matrix.h  paddle.c  paddle.h  renderer.c  renderer.h
